--- a/index.html
+++ b/index.html
@@ -321,13 +321,13 @@
 <body>
     <div id="form-links">
         <a href="https://www.youtube.com/" target="_blank">
-            <img src="PNG/youtube.png" alt="Link youtube">
+            <img src="WebHomework/PNG/youtube.png" alt="Link youtube">
         </a>
         <a href="https://twitter.com/" target="_blank">
-            <img src="PNG/twitter.png" alt="Link twitter">
+            <img src="WebHomework/PNG/twitter.png" alt="Link twitter">
         </a>
         <a href="https://www.facebook.com/?locale=zh_TW" target="_blank">
-            <img src="PNG/facebook.png" alt="Link facebook">
+            <img src="WebHomework/PNG/facebook.png" alt="Link facebook">
         </a>
     </div>
 
@@ -342,9 +342,9 @@
     </header>
 
     <section id="logo-video">
-        <img src="PNG/logo.png" alt="網站Logo">
+        <img src="WebHomework/PNG/logo.png" alt="網站Logo">
         <video autoplay muted loop>
-            <source src="PNG/gamefortest.mp4" type="video/mp4">
+            <source src="WebHomework/PNG/gamefortest.mp4" type="video/mp4">
             你的瀏覽器不支援影片播放。
         </video>
     </section>
@@ -352,7 +352,7 @@
     <section id="content">
         <div class="content-group">
             <div class="column">
-                <img src="PNG/gametest.png" alt="圖片1">
+                <img src="WebHomework/PNG/gametest.png" alt="圖片1">
             </div>
             <div class="column">
                 <h2>劇情大綱</h2>
@@ -362,7 +362,7 @@
         </div>
         <div class="content-group">
             <div class="column">
-                <img src="PNG/gametest.png" alt="圖片2">
+                <img src="WebHomework/PNG/gametest.png" alt="圖片2">
             </div>
             <div class="column">
                 <h2>遊戲介紹</h2>
@@ -372,7 +372,7 @@
         </div>
         <div class="content-group">
             <div class="column">
-                <img src="PNG/gametest.png" alt="圖片3">
+                <img src="WebHomework/PNG/gametest.png" alt="圖片3">
             </div>
             <div class="column">
                 <h2>美術風格</h2>
@@ -384,9 +384,9 @@
 
     <section class="carousel">
         <div class="carousel-images">
-            <img src="PNG/LOOP1.png" alt="loop 1">
-            <img src="PNG/LOOP2.png" alt="loop 2">
-            <img src="PNG/LOOP3.png" alt="loop 3">
+            <img src="WebHomework/PNG/LOOP1.png" alt="loop 1">
+            <img src="WebHomework/PNG/LOOP2.png" alt="loop 2">
+            <img src="WebHomework/PNG/LOOP3.png" alt="loop 3">
         </div>
         <div class="carousel-buttons">
             <button onclick="prevSlide()">&#10094;</button>
@@ -399,28 +399,28 @@
     </section>
 
     <section class="unity-section">
-        <img src="PNG/made_with_unity.png" alt="Made with Unity">
+        <img src="WebHomework/PNG/made_with_unity.png" alt="Made with Unity">
     </section>
 
     <footer id="footer">
         <div class="footer-profiles">
             <div class="footer-profile">
                 <div class="footer-image">
-                    <img src="PNG/41132139.jpg" alt="Profile 1">
+                    <img src="WebHomework/PNG/41132139.jpg" alt="Profile 1">
                 </div>
                 <div class="footer-name">林耿賢</div>
                 <div class="footer-description">這裡是自我介紹與負責的工作內容。</div>
             </div>
             <div class="footer-profile">
                 <div class="footer-image">
-                    <img src="PNG/41132138.jpg" alt="Profile 2">
+                    <img src="WebHomework/PNG/41132138.jpg" alt="Profile 2">
                 </div>
                 <div class="footer-name">王貫霆</div>
                 <div class="footer-description">這裡是自我介紹與負責的工作內容。</div>
             </div>
             <div class="footer-profile">
                 <div class="footer-image">
-                    <img src="PNG/41132205.jpg" alt="Profile 3">
+                    <img src="WebHomework/PNG/41132205.jpg" alt="Profile 3">
                 </div>
                 <div class="footer-name">蔡坤佑</div>
                 <div class="footer-description">這裡是自我介紹與負責的工作內容。</div>
@@ -428,13 +428,13 @@
         </div>
         <div class="footer-links">
             <a href="https://www.youtube.com/" target="_blank">
-                <img src="PNG/youtube.png" alt="Link youtube">
+                <img src="WebHomework/PNG/youtube.png" alt="Link youtube">
             </a>
             <a href="https://twitter.com/" target="_blank">
-                <img src="PNG/twitter.png" alt="Link twitter">
+                <img src="WebHomework/PNG/twitter.png" alt="Link twitter">
             </a>
             <a href="https://www.facebook.com/?locale=zh_TW" target="_blank">
-                <img src="PNG/facebook.png" alt="Link facebook">
+                <img src="WebHomework/PNG/facebook.png" alt="Link facebook">
             </a>
         </div>
         <p>&copy; Copyright 2024 著火杆杆工作室.</p>
